--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
   </div>
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="/open-source/">
+      <a class="navbar-item" href="/open-source-by-organizations/">
         Home
       </a>
 
