--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,7 +23,7 @@
 
         <div class="navbar-dropdown">
           {% for org_type in org_types %}
-          <a class="navbar-item" href="/{{org_type}}">
+          <a class="navbar-item" href="{{org_type}}">
             {{ org_type }}
           </a>
           {% endfor %}
