move included templates to subfolder for better separation

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% include 'header.html' %}
+{% include 'incl/header.html' %}
 
 <h1 class="title">{{title}}</h1>
 
@@ -13,4 +13,4 @@
 {% endfor %}
 </ul>
 
-{% include 'footer.html' %}
+{% include 'incl/footer.html' %}
