--- a/templates/incl/header.html
+++ b/templates/incl/header.html
@@ -11,4 +11,4 @@
     <section id="main-section" class="section">
       <div class="container">
 
-{% include 'navbar.html' %}
+{% include 'incl/navbar.html' %}
