show city and state as well, where exists

--- a/templates/git-organization.html
+++ b/templates/git-organization.html
@@ -10,6 +10,14 @@
         {% endif %}
     </li>
 
+    {% if org.city %}
+    <li>{{org.city}}</li>
+    {% endif %}
+
+    {% if org.state %}
+    <li>{{org.state}}</li>
+    {% endif %}
+
     {% if org.country %}
     <li>{{org.country}}</li>
     {% endif %}
