fix menu urls for the development environment

--- a/templates/incl/navbar.html
+++ b/templates/incl/navbar.html
@@ -23,7 +23,7 @@
 
         <div class="navbar-dropdown">
           {% for org_type, display_name in org_types.items() %}
-          <a class="navbar-item" href="{{org_type}}">
+          <a class="navbar-item" href="/open-source-by-organizations/{{org_type}}">
             {{ display_name }}
           </a>
           {% endfor %}
