--- a/templates/incl/navbar.html
+++ b/templates/incl/navbar.html
@@ -32,7 +32,7 @@
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
-          Areas
+          Locations
         </a>
 
         <div class="navbar-dropdown">
