--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 
 <h1 class="title">{{title}}</h1>
 
-Check out the list of organization by type.
+Check out the lists by organization by type or by the location of the Government or University.
 
 {% include 'incl/footer.html' %}
