Don't assume that we already have github data for every project
For example we don't have it whena PR adds a new entry
See #20

--- a/templates/git-organization.html
+++ b/templates/git-organization.html
@@ -38,6 +38,7 @@
     {% endif %}
 </ul>
 
+{% if org.github %}
 <table class="table is-striped is-hoverable">
   <thead>
     <tr>
@@ -75,6 +76,6 @@
     {% endfor %}
   </tbody>
 </table>
-</table>
+{% endif %}
 
 {% include 'incl/footer.html' %}
