--- a/templates/git-organization.html
+++ b/templates/git-organization.html
@@ -33,6 +33,8 @@
         {% if org.github.blog %}
             <a href="{{ org.github.blog }}">blog</a>
         {% endif %}
+        <br>
+        Repos: {{ org.github.repos | length }}
 
         </div>
     {% endif %}
