don't repeat the end of the sentence

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,11 @@
 
 Currently there are {% for org_type, display_name in org_types.items() %}
    {{ stats.by_type[org_type] }} <a href="/open-source-by-organizations/{{org_type}}">{{ display_name }}</a>
-    {%- if not loop.last -%}, {% endif -%} listed on our site.
+    {%- if not loop.last -%}, {% endif -%}
 {% endfor %}
+listed on our site.
+<p>
+
+This site is being developed by the participants of the <a href="/">course</a>.
 
 {% include 'incl/footer.html' %}
