change index.html template file to get a better show in a table because it allows for easy comparison and visualization of the different organization types and their respective numbers.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,30 @@
 
 <h1 class="title">{{title}}</h1>
 
+<table>
+    <thead>
+        <tr>
+            <th><center>Organization Types&nbsp</center></th>
+            <th><center>&nbspNumber of Organizations</center></th>
+	</tr>
+	<tr>
+	    <th><br></th>
+	</tr>
+    </thead>
+    <tbody>
+        {% for org_type, display_name in org_types.items() %}
+            <tr>
+                <td><a href="/open-source-by-organizations/{{org_type}}">{{ display_name }}</a></td>
+                <td><center>{{ stats.by_type[org_type] }}</center></td>
+            </tr>
+            <tr>
+                <td colspan="2">&nbsp;</td> <!-- Add a row with an empty cell that spans both columns to create spacing between rows -->
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
-Currently there are {% for org_type, display_name in org_types.items() %}
-   {{ stats.by_type[org_type] }} <a href="/open-source-by-organizations/{{org_type}}">{{ display_name }}</a>
-    {%- if not loop.last -%}, {% endif -%}
-{% endfor %}
-listed on our site.
-<p>
-
-This site is being developed by the participants of the <a href="/">course</a>.
+<p>This site is being developed by the participants of the <a href="/">course</a>.</p>
 
 {% include 'incl/footer.html' %}
+
