change index.html template file to get a better show in a table  (#81)
* change index.html template file to get a better show in a table because it allows for easy comparison and visualization of the different organization types and their respective numbers.

* improvment after Gabor asked for me to fix things for index.html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,23 @@
 
 <h1 class="title">{{title}}</h1>
 
+<table class="table is-centered is-narrow">
+    <thead>
+        <tr>
+            <th>Organization Types</th>
+            <th>Number of Organizations</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for org_type, display_name in org_types.items() %}
+            <tr>
+                <td><a href="/open-source-by-organizations/{{org_type}}">{{ display_name }}</a></td>
+                <td>{{ stats.by_type[org_type] }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
-Currently there are {% for org_type, display_name in org_types.items() %}
-   {{ stats.by_type[org_type] }} <a href="/open-source-by-organizations/{{org_type}}">{{ display_name }}</a>
-    {%- if not loop.last -%}, {% endif -%}
-{% endfor %}
-listed on our site.
-<p>
-
-This site is being developed by the participants of the <a href="/">course</a>.
+<p>This site is being developed by the participants of the <a href="/">course</a>.</p>
 
 {% include 'incl/footer.html' %}
